gl: propagate return value from filter and filter_texture

https://bugzilla.gnome.org/show_bug.cgi?id=749846